--- a/index.html
+++ b/index.html
@@ -141,7 +141,33 @@ Error message and password prompt
 
 <p>This <a class="tc-tiddlylink-external" href="https://tiddlywiki.com" rel="noopener noreferrer" target="_blank">TiddlyWiki</a> contains the following tiddlers:</p><p><ul>
 
+<li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/close-all</li>
+
+<li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/encryption</li>
+
+<li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/fold-all</li>
+
 <li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/home</li>
+
+<li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/language</li>
+
+<li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/more-page-actions</li>
+
+<li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/new-journal</li>
+
+<li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/palette</li>
+
+<li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/permaview</li>
+
+<li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/refresh</li>
+
+<li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/storyview</li>
+
+<li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/tag-manager</li>
+
+<li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/theme</li>
+
+<li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/unfold-all</li>
 
 <li>$:/core</li>
 
@@ -149,27 +175,37 @@ Error message and password prompt
 
 <li>$:/isEncrypted</li>
 
+<li>$:/language</li>
+
 <li>$:/palette</li>
 
+<li>$:/state/folded/国际知名图书馆情报学家</li>
+
+<li>$:/state/folded/搜索引擎</li>
+
 <li>$:/state/image-picker/system--1606876770</li>
-
-<li>$:/state/tab--1963855381</li>
-
-<li>$:/state/tab-1163638994</li>
-
-<li>$:/state/tab-1749438307</li>
 
 <li>$:/state/tab/moresidebar-1850697562</li>
 
 <li>$:/state/tab/sidebar--595412856</li>
 
+<li>$:/state/tab-1163638994</li>
+
+<li>$:/state/tab-1749438307</li>
+
+<li>$:/state/tab--1963855381</li>
+
 <li>$:/StoryList</li>
 
 <li>$:/temp/info-plugin</li>
 
+<li>$:/theme</li>
+
 <li>$:/themes/tiddlywiki/snowwhite</li>
 
 <li>$:/themes/tiddlywiki/vanilla</li>
+
+<li>$:/view</li>
 
 <li>国际知名图书馆情报学家</li>
 
@@ -185,8 +221,47 @@ Error message and password prompt
 <!--~~ Ordinary tiddlers ~~-->
 
 <div id="storeArea" style="display:none;">
-<div created="20191111111254260" modified="20191111111307253" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/home">
+<div created="20191119023247694" modified="20191119023255328" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/close-all">
 <pre>hide</pre>
+</div>
+<div created="20191119023832972" modified="20191119023838640" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/encryption">
+<pre>hide</pre>
+</div>
+<div created="20191119023251853" modified="20191119023427894" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/fold-all">
+<pre>show</pre>
+</div>
+<div created="20191111111254260" modified="20191119023455370" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/home">
+<pre>hide</pre>
+</div>
+<div created="20191119023556451" modified="20191119023607496" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/language">
+<pre>hide</pre>
+</div>
+<div created="20191119023850567" modified="20191119023850567" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/more-page-actions">
+<pre>show</pre>
+</div>
+<div created="20191119023514636" modified="20191119023526038" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/new-journal">
+<pre>hide</pre>
+</div>
+<div created="20191119023608785" modified="20191119023608785" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/palette">
+<pre>show</pre>
+</div>
+<div created="20191119023458410" modified="20191119023509053" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/permaview">
+<pre>hide</pre>
+</div>
+<div created="20191119023852700" modified="20191119023852700" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/refresh">
+<pre>show</pre>
+</div>
+<div created="20191119023816727" modified="20191119023831871" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/storyview">
+<pre>hide</pre>
+</div>
+<div created="20191119023547677" modified="20191119023547677" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/tag-manager">
+<pre>show</pre>
+</div>
+<div created="20191119023756145" modified="20191119023816141" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/theme">
+<pre>hide</pre>
+</div>
+<div created="20191119023253417" modified="20191119023433659" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/unfold-all">
+<pre>show</pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="" description="TiddlyWiki5 core" list="readme" plugin-priority="0" plugin-type="plugin" title="$:/core" type="application/json" version="5.1.21">
 <pre>{
@@ -9388,14 +9463,26 @@ Error message and password prompt
 <div title="$:/isEncrypted">
 <pre>no</pre>
 </div>
-<div created="20191111111136525" modified="20191111111228389" title="$:/palette">
-<pre>$:/palettes/Vanilla</pre>
+<div created="20191119023601412" modified="20191119023601412" title="$:/language">
+<pre>$:/languages/en-GB</pre>
+</div>
+<div created="20191111111136525" modified="20191119023747667" title="$:/palette">
+<pre>$:/palettes/Blanca</pre>
+</div>
+<div created="20191119023428991" modified="20191119023434699" title="$:/state/folded/国际知名图书馆情报学家">
+<pre>show</pre>
+</div>
+<div created="20191119023428991" modified="20191119023434699" title="$:/state/folded/搜索引擎">
+<pre>show</pre>
 </div>
 <div created="20191104022239981" modified="20191104022243225" title="$:/state/image-picker/system--1606876770">
 <pre>show</pre>
 </div>
-<div created="20191111111135094" modified="20191111111629071" title="$:/state/tab--1963855381">
-<pre>$:/themes/tiddlywiki/vanilla/themetweaks</pre>
+<div created="20191111111728718" modified="20191111111910131" title="$:/state/tab/moresidebar-1850697562">
+<pre>$:/core/ui/MoreSideBar/Tags</pre>
+</div>
+<div created="20191111110525998" modified="20191119023208036" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/Tools</pre>
 </div>
 <div created="20191111111810244" modified="20191111111815370" title="$:/state/tab-1163638994">
 <pre>$:/core/ui/MoreSideBar/Plugins/Languages</pre>
@@ -9403,11 +9490,8 @@ Error message and password prompt
 <div created="20191111111111482" modified="20191112021115760" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
-<div created="20191111111728718" modified="20191111111910131" title="$:/state/tab/moresidebar-1850697562">
-<pre>$:/core/ui/MoreSideBar/Tags</pre>
-</div>
-<div created="20191111110525998" modified="20191112021216614" title="$:/state/tab/sidebar--595412856">
-<pre>$:/core/ui/SideBar/Open</pre>
+<div created="20191111111135094" modified="20191111111629071" title="$:/state/tab--1963855381">
+<pre>$:/themes/tiddlywiki/vanilla/themetweaks</pre>
 </div>
 <div list="国际知名图书馆情报学家 搜索引擎" title="$:/StoryList">
 <pre></pre>
@@ -9425,19 +9509,19 @@ Error message and password prompt
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
-            &quot;text&quot;: &quot;https://lly55999.github.io/good-good-study/%E6%A2%81%E7%90%B3%E7%8E%A520191208151018.html&quot;
+            &quot;text&quot;: &quot;file:///C:/Users/Administrator/Downloads/LLY55999.html&quot;
         },
         &quot;$:/info/url/host&quot;: {
             &quot;title&quot;: &quot;$:/info/url/host&quot;,
-            &quot;text&quot;: &quot;lly55999.github.io&quot;
+            &quot;text&quot;: &quot;&quot;
         },
         &quot;$:/info/url/hostname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/hostname&quot;,
-            &quot;text&quot;: &quot;lly55999.github.io&quot;
+            &quot;text&quot;: &quot;&quot;
         },
         &quot;$:/info/url/protocol&quot;: {
             &quot;title&quot;: &quot;$:/info/url/protocol&quot;,
-            &quot;text&quot;: &quot;https:&quot;
+            &quot;text&quot;: &quot;file:&quot;
         },
         &quot;$:/info/url/port&quot;: {
             &quot;title&quot;: &quot;$:/info/url/port&quot;,
@@ -9445,7 +9529,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/pathname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/pathname&quot;,
-            &quot;text&quot;: &quot;/good-good-study/%E6%A2%81%E7%90%B3%E7%8E%A520191208151018.html&quot;
+            &quot;text&quot;: &quot;/C:/Users/Administrator/Downloads/LLY55999.html&quot;
         },
         &quot;$:/info/url/search&quot;: {
             &quot;title&quot;: &quot;$:/info/url/search&quot;,
@@ -9453,7 +9537,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/origin&quot;: {
             &quot;title&quot;: &quot;$:/info/url/origin&quot;,
-            &quot;text&quot;: &quot;https://lly55999.github.io&quot;
+            &quot;text&quot;: &quot;file://&quot;
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
@@ -9469,6 +9553,9 @@ Error message and password prompt
         }
     }
 }</pre>
+</div>
+<div created="20191119023804268" modified="20191119023811553" title="$:/theme">
+<pre>$:/themes/tiddlywiki/snowwhite</pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.21">
 <pre>{
@@ -9578,6 +9665,9 @@ Error message and password prompt
         }
     }
 }</pre>
+</div>
+<div created="20191119023821245" modified="20191119023828034" title="$:/view">
+<pre>classic</pre>
 </div>
 <div created="20191111123801103" modified="20191112060341745" tags="homework" title="国际知名图书馆情报学家">
 <pre>!1. ''兰卡斯特（F.Wilfrid.Lancaster）''：美国图书馆学家、情报学家、教育家。
